fixed zooming issue and heading visibilty and responsiveness

--- a/src/components/ui/SelectCategoryModal.module.css
+++ b/src/components/ui/SelectCategoryModal.module.css
@@ -18,7 +18,6 @@
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     width: 100vw;
     z-index: 999;
-    height: 100vh;
 }
 
 .container>div>ul>li {
@@ -50,7 +49,7 @@
     justify-content: center;
     margin-top: 1rem;
     padding: 1rem 1.5rem;
-
+    text-decoration: none;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     text-transform: capitalize;
     transition: all 3s ease-in;
