--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,8 @@ label {
 
 .grid {
   display: grid;
-  row-gap: 9.6rem;
-  column-gap: 6.4rem;
+  row-gap: 4.4rem;
+  column-gap: 2.2rem;
 }
 
 .toast {
@@ -62,11 +62,6 @@ label {
 @media screen and (max-width: 768px) {
   html {
     font-size: 50%;
-  }
-
-  .grid {
-    row-gap: 4.8rem;
-    column-gap: 3.2rem;
   }
 }
 
