--- a/src/pages/Products.module.css
+++ b/src/pages/Products.module.css
@@ -22,7 +22,7 @@
 
 
 .gridColumns {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .heading {
@@ -119,14 +119,6 @@
 
 
 /*Media Queries*/
-@media screen and (max-width: 1280px) {
-    .gridColumns {
-        grid-template-columns: repeat(2, 1fr);
-        margin-left: 5rem;
-        margin-right: 5rem;
-    }
-}
-
 @media screen and (max-width: 1024px) {
     .heading {
         font-size: 3.2rem;
@@ -148,8 +140,8 @@
     }
 
     .detailsContainer {
-        margin-left: 2.5rem;
-        margin-right: 2.5rem;
+        margin-left: 2.2rem;
+        margin-right: 2.2rem;
         padding-bottom: 4.8rem;
     }
 
